# ColorPicker

./: .gitignore  CMakeLists.txt  ColorPicker_en_US.ts  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cmake/: QtCommon.cmake  windows_metafile.rc.in
res/: AppIcon.icns  assets.qrc  colors.json
src/: desktopinfo.cpp  desktopinfo.h  dialogabout.ui  dialogstartupinfo.cpp  dialogstartupinfo.h  dialogstartupinfo.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointercolor.cpp  pointercolor.h  qguiappcurrentscreen.cpp  qguiappcurrentscreen.h  request.cpp  screengrabber.cpp  screengrabber.h  waylandoverlay.cpp  waylandoverlay.h
